k8s-local-kubespray/mainfest/monitoring/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules: 
    - host: grafana.nhatanhdevops.com
      http: 
        paths: 
          - pathType: Prefix
            backend: 
              service: 
                name: png-stack-grafana
                port: 
                  number: 80
            path: /
